Fixed resolveProxyTargetClass exception message